WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202537
[iOS] WebContent process can be interrupted during suspension; loses "Now Playing" status
https://bugs.webkit.org/show_bug.cgi?id=202537
Summary
[iOS] WebContent process can be interrupted during suspension; loses "Now Pla...
Jer Noble
Reported
2019-10-03 10:51:58 PDT
[iOS] WebContent process can be interrupted during suspension; loses "Now Playing" status
Attachments
Patch
(6.79 KB, patch)
2019-10-03 10:54 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.42 KB, patch)
2019-10-03 11:02 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(5.53 KB, patch)
2019-10-03 11:07 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.55 KB, patch)
2019-10-03 14:29 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-10-03 10:52:32 PDT
<
rdar://problem/55952707
>
Jer Noble
Comment 2
2019-10-03 10:54:23 PDT
Created
attachment 380139
[details]
Patch
Jer Noble
Comment 3
2019-10-03 11:02:40 PDT
Created
attachment 380141
[details]
Patch
Eric Carlson
Comment 4
2019-10-03 11:05:43 PDT
Comment on
attachment 380139
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380139&action=review
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:200 > +#if USE(AUDIO_SESSION) > + if (!anyOfSessions([] (auto& session) { return session.state() == PlatformMediaSession::Playing; })) > + maybeDeactivateAudioSession(); > +#endif
As we discussed, this should only happen when we're in the background
Jer Noble
Comment 5
2019-10-03 11:07:24 PDT
Created
attachment 380143
[details]
Patch
Jer Noble
Comment 6
2019-10-03 14:29:50 PDT
Created
attachment 380160
[details]
Patch for landing
WebKit Commit Bot
Comment 7
2019-10-03 18:09:50 PDT
Comment on
attachment 380160
[details]
Patch for landing Clearing flags on attachment: 380160 Committed
r250694
: <
https://trac.webkit.org/changeset/250694
>
WebKit Commit Bot
Comment 8
2019-10-03 18:09:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug